Update form action URL in index.html

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <h1>Quero um Sugar Daddy</h1>
     <p class="subtitle">Cadastre-se em 30 segundos e comece a conhecer homens generosos que valorizam sua companhia e querem te mimar</p>
 
-    <form id="cadastroForm" action="https://formsubmit.co/contraltos_premios_7e@icloud.com" method="POST" enctype="multipart/form-data">
+    <form id="cadastroForm" action="https://formsubmit.co/7894b1fa5ba69a9b3e731d314257997a" method="POST" enctype="multipart/form-data">
 
       <label for="nome">Seu nome (ou como quer ser chamada)</label>
       <input type="text" id="nome" name="nome" placeholder="Ex: Larissa ou Lari" required>
