--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
       <input type="text" id="nome" name="nome" placeholder="Ex: Larissa ou Lari" required>
 
       <label for="idade">Idade</label>
-      <input type="number" id="idade" name="idade" min="18" max="40" placeholder="18 a 24" required>
+      <input type="text" id="idade" name="idade" min="18" max="40" placeholder="18 a 24" required>
 
       <label for="whatsapp">WhatsApp com DDD (só números)</label>
-      <input type="tel" id="whatsapp" name="whatsapp" placeholder="11987654321" pattern="[0-9]{10,11}" required>
+      <input type="tel" id="whatsapp" name="whatsapp" placeholder="11987654321" required>
 
       <label>Já foi sugar baby antes?</label>
       <div class="radio-group">
@@ -165,7 +165,7 @@
       </div>
 
       <label for="motivo">Por que você quer ter um Daddy?</label>
-      <textarea id="motivo" name="motivo" rows="4" placeholder="Escreva com suas palavras... pode ser sincero 😊" required></textarea>
+      <textarea id="motivo" name="motivo" rows="4" placeholder="Escreva com suas palavras... pode ser sincera 😊" ></textarea>
 
       <label>Sua melhor foto (quanto mais bonita, mais rápido você recebe contatos)</label>
       <div class="foto-area" id="fotoArea">
