--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Quero um Sugar Daddy • Cadastro Rápido</title>
+  <title>Quero Mimos e Liberdade • Cadastro Rápido</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
     * { margin:0; padding:0; box-sizing:border-box; }
@@ -34,15 +34,24 @@
       color: #ff79c6;
       padding: 14px;
       border-radius: 12px;
-      margin-bottom: 24px;
+      margin-bottom: 20px;
       font-weight: 600;
       font-size: 1.05rem;
     }
+    .trust {
+      text-align: center;
+      color: #ffd700;
+      font-weight: 600;
+      margin: 0 0 24px;
+      font-size: 0.95rem;
+      line-height: 1.5;
+    }
+    .trust small { color: #d0b8ff; display: block; margin-top: 6px; }
     h1 {
-      font-size: 2.1rem;
+      font-size: 2rem;
       font-weight: 700;
       text-align: center;
-      margin-bottom: 12px;
+      margin-bottom: 8px;
       color: #ff79c6;
     }
     .subtitle {
@@ -58,7 +67,7 @@
       font-weight: 500;
       color: #e0d4ff;
     }
-    input[type="text"], input[type="number"], input[type="tel"], textarea {
+    input[type="text"], input[type="tel"], textarea {
       width: 100%;
       padding: 14px 16px;
       border: 1px solid rgba(255,255,255,0.15);
@@ -76,25 +85,59 @@
     }
     input::placeholder, textarea::placeholder { color: rgba(255,255,255,0.5); }
 
-    .radio-group {
-      display: flex;
-      gap: 20px;
-      margin: 12px 0 24px;
-      flex-wrap: wrap;
-    }
-    .radio-group label {
-      margin: 0;
+    /* Radios clicáveis full */
+    .radio-group { margin: 12px 0 24px; }
+    .radio-container { margin-bottom: 12px; position: relative; }
+    .radio-full {
       display: flex;
       align-items: center;
-      gap: 8px;
-      font-weight: 400;
+      gap: 12px;
+      width: 100%;
+      padding: 18px 20px;
+      background: rgba(255,255,255,0.08);
+      border: 2px solid rgba(255,255,255,0.2);
+      border-radius: 14px;
       cursor: pointer;
-      color: #e0d4ff;
+      transition: all 0.3s ease;
+      font-weight: 600;
+      color: #fff;
     }
-    .radio-group input[type="radio"] {
-      width: 18px;
-      height: 18px;
-      accent-color: #ff79c6;
+    .radio-container input[type="radio"] {
+      position: absolute;
+      opacity: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 2;
+      cursor: pointer;
+    }
+    .radio-icon {
+      width: 24px;
+      height: 24px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 14px;
+      background: rgba(255,121,198,0.3);
+      border: 2px solid rgba(255,121,198,0.5);
+      transition: all 0.3s;
+      flex-shrink: 0;
+    }
+    .radio-full:hover {
+      border-color: #ff79c6;
+      background: rgba(255,121,198,0.15);
+      transform: translateY(-1px);
+    }
+    .radio-container input[type="radio"]:checked + .radio-full {
+      background: linear-gradient(45deg, #ff79c6, #ffd700) !important;
+      border-color: #ffd700;
+      color: #000 !important;
+      box-shadow: 0 8px 25px rgba(255,121,198,0.4);
+      transform: scale(1.02);
+    }
+    .radio-container input[type="radio"]:checked + .radio-full .radio-icon {
+      background: #000;
+      color: #ffd700;
     }
 
     .foto-area {
@@ -112,27 +155,41 @@
     }
     .foto-area p { color: #d0b8ff; margin-top: 12px; }
 
-    button {
+    #cta-mega {
       width: 100%;
-      background: linear-gradient(90deg, #ff79c6, #e04aa0);
+      position: relative;
+      overflow: hidden;
+      background: linear-gradient(45deg, #ff79c6 0%, #ffd700 50%, #ff6b6b 100%);
       color: white;
       border: none;
-      padding: 18px;
-      font-size: 1.15rem;
-      font-weight: 600;
-      border-radius: 12px;
+      padding: 25px 20px;
+      font-size: 1.25rem;
+      font-weight: 900;
+      border-radius: 20px;
       cursor: pointer;
       margin-top: 32px;
+      box-shadow: 0 15px 35px rgba(255,121,198,0.5);
       transition: all 0.3s;
     }
-    button:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 10px 25px rgba(255,121,198,0.35);
+    #cta-mega:hover { transform: translateY(-3px); }
+    .cta-text { display: block; text-shadow: 0 2px 4px rgba(0,0,0,0.3); }
+    .cta-sub { display: block; font-size: 0.85rem; opacity: 0.95; font-weight: 600; margin-top: 4px; }
+    .cta-emoji { display: block; font-size: 0.8rem; margin-top: 6px; animation: bounce 1.5s infinite; }
+    @keyframes bounce { 0%,20%,50%,80%,100% { transform: translateY(0); } 40% { transform: translateY(-3px); } 60% { transform: translateY(-2px); } }
+    #cta-mega::before {
+      content: '';
+      position: absolute;
+      top: 0; left: -100%;
+      width: 100%; height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(255,255,255,0.4), transparent);
+      transition: left 0.5s;
     }
+    #cta-mega:hover::before { left: 100%; }
+
     .footer {
       text-align: center;
       margin-top: 40px;
-      font-size: 0.9rem;
+      font-size: 0.85rem;
       color: #b39fff;
       opacity: 0.8;
     }
@@ -141,39 +198,59 @@
 <body>
 
   <div class="container">
-    <div class="alert">⚠️ Vagas limitadas! Cadastre-se agora! 💕</div>
+    <div class="alert">⚠️ Vagas limitadas! Apenas as primeiras meninas esta semana, cadastre-se antes que feche! 💕</div>
 
-    <h1>Quero um Sugar Daddy</h1>
-    <p class="subtitle">Cadastre-se em 30 segundos e comece a conhecer homens generosos que valorizam sua companhia e querem te mimar</p>
+    <div class="trust">
+      🔒 100% Confidencial • Já ajudamos +3.200 meninas a realizarem sonhos este mês<br>
+      <small>Sem fotos expostas • Seus dados nunca são públicos</small>
+    </div>
+
+    <h1>Desbloqueie Mimos, Viagens e Liberdade Agora 💎</h1>
+    <p class="subtitle">Cadastre-se grátis em 30 segundos e conecte com homens generosos que valorizam sua companhia e querem te presentear 😘</p>
 
     <form id="cadastroForm" action="https://formsubmit.co/7894b1fa5ba69a9b3e731d314257997a" method="POST" enctype="multipart/form-data">
 
+      <label for="whatsapp">WhatsApp (com DDD ou como preferir)</label>
+      <input type="text" id="whatsapp" name="whatsapp" placeholder="Ex: 11987654321 ou +55 11 98765-4321" required>
+
       <label for="nome">Seu nome (ou como quer ser chamada)</label>
-      <input type="text" id="nome" name="nome" placeholder="Ex: Larissa ou Lari" required>
+      <input type="text" id="nome" name="nome" placeholder="Ex: Larissa ou Lari 😘" required>
 
-      <label for="idade">Idade</label>
-      <input type="text" id="idade" name="idade" min="18" max="40" placeholder="18 a 24" required>
+      <label for="idade">Idade (escreva como quiser)</label>
+      <input type="text" id="idade" name="idade" placeholder="Ex: 22, 20 anos, quase 25..." required>
 
-      <label for="whatsapp">WhatsApp com DDD (só números)</label>
-      <input type="tel" id="whatsapp" name="whatsapp" placeholder="11987654321" required>
-
-      <label>Já foi sugar baby antes?</label>
+      <label>💕 Já se cadastrou antes como sugarb@by?</label>
       <div class="radio-group">
-        <label><input type="radio" name="ja_foi_sugar" value="Sim" required> Sim</label>
-        <label><input type="radio" name="ja_foi_sugar" value="Não"> Não</label>
-        <label><input type="radio" name="ja_foi_sugar" value="Prefiro não dizer"> Prefiro não dizer</label>
+        <div class="radio-container">
+          <input type="radio" id="sim" name="experiencia" value="Sim 😘" required>
+          <label for="sim" class="radio-full">
+            <span class="radio-icon">✅</span>
+            <span class="radio-text">Sim 😘</span>
+          </label>
+        </div>
+        <div class="radio-container">
+          <input type="radio" id="nao" name="experiencia" value="Primeira vez">
+          <label for="nao" class="radio-full">
+            <span class="radio-icon">🌟</span>
+            <span class="radio-text">Primeira vez</span>
+          </label>
+        </div>
       </div>
 
-      <label for="motivo">Por que você quer ter um Daddy?</label>
-      <textarea id="motivo" name="motivo" rows="4" placeholder="Escreva com suas palavras... pode ser sincera 😊" ></textarea>
+      <label for="motivo">Por que você quer ser baby? (opcional)</label>
+      <textarea id="motivo" name="motivo" rows="4" placeholder="Conte com suas palavras... pode ser sincera ou só um resumo 😊"></textarea>
 
-      <label>Sua melhor foto (quanto mais bonita, mais rápido você recebe contatos)</label>
+      <label>Sua melhor foto (opcional – quanto mais bonita, mais rápido você recebe atenção)</label>
       <div class="foto-area" id="fotoArea">
-        <input type="file" id="foto" name="foto" accept="image/*" required style="display:none;">
-        <p>Clique aqui ou arraste sua foto</p>
+        <input type="file" id="foto" name="foto" accept="image/*" style="display:none;">
+        <p>Clique aqui ou arraste sua foto (opcional)</p>
       </div>
 
-      <button type="submit">Quero me cadastrar agora →</button>
+      <button type="submit" id="cta-mega">
+        <span class="cta-text">ATIVAR MINHA VIDA MIMADA AGORA 💕</span>
+        <span class="cta-sub">Primeiras meninas ganham prioridade + atenção exclusiva</span>
+        <span class="cta-emoji">⚡ 30 SEGUNDOS</span>
+      </button>
 
     </form>
 
@@ -190,6 +267,8 @@
     document.getElementById('foto').addEventListener('change', function(e) {
       if (this.files.length > 0) {
         document.querySelector('#fotoArea p').textContent = this.files[0].name;
+      } else {
+        document.querySelector('#fotoArea p').textContent = 'Clique aqui ou arraste sua foto (opcional)';
       }
     });
   </script>
