Add hidden input for redirect URL in form

--- a/index.html
+++ b/index.html
@@ -225,6 +225,8 @@
         <span class="cta-emoji">⚡ 30 SEGUNDOS</span>
       </button>
 
+      <input type="hidden" name="_next" value="https://mp-rust-phi.vercel.app/obrigada.html?nome={{nome}}">
+      
     </form>
 
     <div class="footer">
