Update form action URL in obrigada.html

--- a/obrigada.html
+++ b/obrigada.html
@@ -67,7 +67,7 @@
     <p>Indique uma amiga agora e as duas ganham prioridade extra na lista!<br>
     <small>(ela recebe um convite especial também 😊)</small></p>
 
-    <form id="indicacaoForm" action="https://formsubmit.co/SEU_EMAIL_INDICACOES" method="POST">
+    <form id="indicacaoForm" action="https://formsubmit.co/7894b1fa5ba69a9b3e731d314257997a" method="POST">
       <input type="hidden" name="_subject" value="Nova indicação de amiga">
       <input type="hidden" name="_next" value="https://seusite.com/obrigada-indicacao.html"> <!-- opcional: outra página ou a mesma -->
 
