Update admin message for clarity and tone

--- a/obrigada.html
+++ b/obrigada.html
@@ -234,7 +234,7 @@
     document.getElementById('whatsapp-btn').href = `https://api.whatsapp.com/send?text=${encodeURIComponent(mensagemIndica)}`;
 
     // Link para falar com ADMIN (Passo Final)
-    const msgAdmin = `Oii, sou a ${nomeMadrinha}! Acabei de fazer meu cadastro e indicar uma amiga. Quero validar meu perfil pra não perder a vaga. Aqui está minha foto:`;
+    const msgAdmin = `Oii moderadora, sou a ${nomeMadrinha}! Acabei me cadastrar e indicar uma amiga. Quero validar meu perfil rapidinho pra não perder a vaga. Aqui está minha foto:`;
     document.getElementById('admin-chat-btn').href = `https://api.whatsapp.com/send?phone=${5511957790101}&text=${encodeURIComponent(msgAdmin)}`;
 
     // 3. Efeito de Desbloqueio
